Added full API docs
